--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "generate-unique-id": "^2.0.3",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
